--- a/config/cfg/addons/flat-mouse.cfg
+++ b/config/cfg/addons/flat-mouse.cfg
@@ -1,6 +1,12 @@
 // Flat Mouse addon
 // Makes mouse input "flat" with stable input, no acceleration and 1:1 zoom sensitivity
 
-alias addon_flat-mouse_post"exec flat-mouse/post.cfg"
+m_customaccel 0 // Disable custom mouse acceleration possibly defined by user
+m_filter 0 // Mouse filtering seems to be glitchy on some systems, only use the raw input
+m_mousespeed 0 // Disable Windows mouse acceleration (-noforcemspd)
+m_mouseaccel1 0 // ^ (-noforcemaccel)
+m_mouseaccel2 0 // ^ (-noforcemaccel)
+m_rawinput 1 // Use raw input from mouse
+zoom_sensitivity_ratio .793471 // Use same sensitivity as when unscoped
 
-alias addon_flat-mouse"alias addon_flat-mouse addon_flat-mouse_post"
+echo"Flat Mouse addon applied"
