--- a/config/cfg/addons/no-explosion-smoke.cfg
+++ b/config/cfg/addons/no-explosion-smoke.cfg
@@ -4,6 +4,4 @@
 // MAD76, Quik and Benroads - https://www.teamfortress.tv/25647/no-explosion-smoke-script
 // pixxul - https://gamebanana.com/mods/12444
 
-alias addon_no-explosion-smoke_post"exec no-explosion-smoke/post.cfg"
-
-alias addon_no-explosion-smoke"alias addon_no-explosion-smoke addon_no-explosion-smoke_post"
+echo"No Explosion Smoke addon applied"
