--- a/config/cfg/addons/no-soundscapes.cfg
+++ b/config/cfg/addons/no-soundscapes.cfg
@@ -1,6 +1,4 @@
 // No Soundscapes addon
 // This file exists just for the console echo
 
-alias addon_no-soundscapes_post"exec no-soundscapes/post.cfg"
-
-alias addon_no-soundscapes"alias addon_no-soundscapes addon_no-soundscapes_post"
+echo"No Soundscapes addon applied"
