--- a/config/cfg/addons/null-canceling-movement.cfg
+++ b/config/cfg/addons/null-canceling-movement.cfg
@@ -2,7 +2,33 @@
 // Prevents you from pressing two opposing directions, which causes you to stop moving
 // Credit: povohat
 
-alias addon_null-movement_pre"exec null-canceling-movement/pre.cfg"
-alias addon_null-movement_post"exec null-canceling-movement/post.cfg"
+alias move_bind_wasd"bind w +mf;bind a +ml;bind s +mb;bind d +mr;alias move_bind_level echo move_bind=wasd"
+alias move_bind_esdf"bind e +mf;bind s +ml;bind d +mb;bind f +mr;alias move_bind_level echo move_bind=esdf"
+alias move_bind_zqsd"bind z +mf;bind q +ml;bind s +mb;bind d +mr;alias move_bind_level echo move_bind=zqsd"
+alias move_bind_arrows"bind UPARROW +mf;bind LEFTARROW +ml;bind DOWNARROW +mb;bind RIGHTARROW +mr;alias move_bind_level echo move_bind=arrows"
+alias move_bind_asdf"bind a +mf;bind d +ml;bind s +mb;bind f +mr;alias move_bind_level echo move_bind=asdf"
+alias move_bind_vim"bind k +mf;bind h +ml;bind j +mb;bind l +mr;alias move_bind_level echo move_bind=vim"
 
-alias addon_null-movement"addon_null-movement_pre;alias addon_null-movement addon_null-movement_post"
+alias move_bind move_bind_wasd
+
+alias move_bind=wasd"alias move_bind move_bind_wasd"
+alias move_bind=esdf"alias move_bind move_bind_esdf"
+alias move_bind=zqsd"alias move_bind move_bind_zqsd"
+alias move_bind=arrows"alias move_bind move_bind_arrows"
+alias move_bind=asdf"alias move_bind move_bind_asdf"
+alias move_bind=vim"alias move_bind move_bind_vim"
+
+alias +mf"-back;+forward;alias cf +forward"
+alias +mb"-forward;+back;alias cb +back"
+alias +ml"-moveright;+moveleft;alias cl +moveleft"
+alias +mr"-moveleft;+moveright;alias cr +moveright"
+alias -mf"-forward;cb;alias cf"
+alias -mb"-back;cf;alias cb"
+alias -ml"-moveleft;cr;alias cl"
+alias -mr"-moveright;cl;alias cr"
+alias cf
+alias cb
+alias cl
+alias cr
+
+echo"Null-Canceling Movement addon applied"
