--- a/config/cfg/addons/opengl.cfg
+++ b/config/cfg/addons/opengl.cfg
@@ -1,6 +1,15 @@
 // OpenGL addon
 // Provides additional optimizations for OpenGL (macOS and Linux)
 
-alias addon_opengl_post"exec opengl/post.cfg"
+gl_amd_occlusion_workaround 0
+gl_batch_tex_creates 1
+gl_batch_tex_destroys 1
+gl_debug_output 0
+gl_magnify_resolve_mode 1
+gl_mtglflush_at_tof 1
+gl_paircache_rows_lg2 14
+gl_pow2_tempmem 1
+gl_radar7954721_workaround_mixed 0
+mat_texture_reload_frame_swap_workaround 0
 
-alias addon_opengl"alias addon_opengl addon_opengl_post"
+echo"OpenGL addon applied"
