--- a/config/cfg/addons/transparent-viewmodels.cfg
+++ b/config/cfg/addons/transparent-viewmodels.cfg
@@ -4,7 +4,10 @@
 // transparent viewmodels to work. Transparent viewmodels also require
 // dxlevel 90 or higher.
 
-alias addon_transparent-vm_pre"exec transparent-viewmodels/pre.cfg"
-alias addon_transparent-vm_post"exec transparent-viewmodels/post.cfg"
+post_processing=off;post_processing_off
+anti_aliasing=off;anti_aliasing_off
 
-alias addon_transparent-vm"addon_transparent-vm_pre;alias addon_transparent-vm addon_transparent-vm_post"
+mat_motion_blur_enabled 1
+mat_motion_blur_strength 0
+
+echo"Transparent Viewmodels addon applied"
