--- a/config/cfg/addons/transparent-viewmodels.cfg
+++ b/config/cfg/addons/transparent-viewmodels.cfg
@@ -11,3 +11,4 @@ mat_motion_blur_enabled 1
 mat_motion_blur_strength 0
 
 echo"Transparent Viewmodels addon applied"
+echo"WARNING: this addon disables the Post-Processing, Motion Blur and Anti-Aliasing modules!!!"
