--- a/config/cfg/addons/transparent-viewmodels.cfg
+++ b/config/cfg/addons/transparent-viewmodels.cfg
@@ -3,6 +3,7 @@
 // transparent viewmodels, your HUD must enable them. This only allows
 // transparent viewmodels to work. Transparent viewmodels also require
 // dxlevel 90 or higher.
+// WARNING: this addon DISABLES the Post-Processing, Motion Blur and Anti-Aliasing modules!!!
 
 post_processing=off;post_processing_off
 anti_aliasing=off;anti_aliasing_off
@@ -11,4 +12,4 @@ mat_motion_blur_enabled 1
 mat_motion_blur_strength 0
 
 echo"Transparent Viewmodels addon applied"
-echo"WARNING: this addon disables the Post-Processing, Motion Blur and Anti-Aliasing modules!!!"
+echo"WARNING: this addon DISABLES the Post-Processing, Motion Blur and Anti-Aliasing modules!!!"
