--- a/config/cfg/addons/transparent-viewmodels.cfg
+++ b/config/cfg/addons/transparent-viewmodels.cfg
@@ -7,6 +7,7 @@
 
 post_processing=off;post_processing_off
 anti_aliasing=off;anti_aliasing_off
+motion_blur=off;motion_blur_off
 
 mat_motion_blur_enabled 1
 mat_motion_blur_strength 0
