--- a/config/addons/mastercomfig-disable-pyroland-addon/cfg/disable-pyroland.cfg
+++ b/config/addons/mastercomfig-disable-pyroland-addon/cfg/disable-pyroland.cfg
@@ -1,4 +1,4 @@
 // Disable Pyroland addon
 // This file exists just for the console echo
 
-echo"Disabe Pyroland addon applied"
+echo"Disable Pyroland addon applied"
