Transparent Viewmodels addon updates
The addon now blocks some necessary modules and commands to make it work properly.

Co-Authored-By: Kenajcrap <25385928+Kenajcrap@users.noreply.github.com>

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1893,3 +1893,6 @@ alias game_overrides"cheap_water_override;detail_props_override;shadowlod_overri
 
 alias game_overrides_once"match_hud_once;game_overrides_once_c"
 block_game_overrides_once
+
+// Transparent Viewmodels aliases
+tr_vm_aliases
