Transparent Viewmodels addon: more updates
- Changed the echoes to better reflect what the addon is doing.

- Removed alias from mat_colcorrection_disableentities.

Co-Authored-By: Kenajcrap <25385928+Kenajcrap@users.noreply.github.com>

--- a/config/addons/mastercomfig-transparent-viewmodels-addon/cfg/transparent-viewmodels/pre.cfg
+++ b/config/addons/mastercomfig-transparent-viewmodels-addon/cfg/transparent-viewmodels/pre.cfg
@@ -2,13 +2,13 @@
 // This prevents the Motion Blur, Anti-Aliasing and Post-Processing modules from working
 
 // Echoes
-alias tr_vm_echo"echo This command or module is overwritten by the Transparent Viewmodels addon."
+alias tr_vm_echo"echo This command or module is being overwritten by the Transparent Viewmodels addon."
 
-alias mb_tr_vm_echo"echo The Motion Blur module is overwritten by the Transparent Viewmodels addon."
+alias mb_tr_vm_echo"echo The Motion Blur module is being overwritten by the Transparent Viewmodels addon."
 
-alias aa_tr_vm_echo"echo The Anti-Aliasing module is overwritten by the Transparent Viewmodels addon."
+alias aa_tr_vm_echo"echo The Anti-Aliasing module is being overwritten by the Transparent Viewmodels addon."
 
-alias pp_tr_vm_echo"echo The Post-Processing module is overwritten by the Transparent Viewmodels addon."
+alias pp_tr_vm_echo"echo The Post-Processing module is being overwritten by the Transparent Viewmodels addon."
 
 // Motion Blur
 mat_motion_blur_enabled 1
