--- a/config/addons/mastercomfig-transparent-viewmodels-addon/cfg/transparent-viewmodels/tr_vm_aliases.cfg
+++ b/config/addons/mastercomfig-transparent-viewmodels-addon/cfg/transparent-viewmodels/tr_vm_aliases.cfg
@@ -35,7 +35,7 @@ alias block_antialias_echo aa_tr_vm_echo
 // Post-Processing aliases
 alias mat_hdr_level tr_vm_echo
 alias mat_colorcorrection tr_vm_echo
-alias mat_colcorrection_disableentities tr_vm_echo
+//alias mat_colcorrection_disableentities tr_vm_echo // "Alias name too long", but mat_colorcorrection being 0 does the job
 alias r_bloomtintr tr_vm_echo
 alias r_bloomtintg tr_vm_echo
 alias r_bloomtintb tr_vm_echo
