Correct VSync being set in the None Preset
The None preset skips all graphical settings that can be set using the built-in advanced video settings menu, so VSync shouldn't be set.

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -876,7 +876,7 @@ alias mm_queue_party"quit smoking"
 // ---------------
 // '-- FPS Cap --'
 // ---------------
-// Controls the highest frame rate (FPS/frames per second) that the game can reach.
+// Controls the highest frame rate (FPS/frames per second) that the game can reach
 
 //mat_powersavingsmode 0 // Enable or disable power savings mode. It sets the FPS cap to half of the display's refresh rate.
 //fps_max 0 // Reaching the cap within a certain timing causes CPU intrinsic pauses
@@ -904,14 +904,14 @@ alias fpscap fpscap_1000
 // -------------
 // '-- VSync --'
 // -------------
-// Controls VSync.
+// Controls VSync
 
 //mat_vsync 0 // Disable VSync
 
 alias vsync_off"mat_vsync 0;alias vsync_level echo vsync=off"
 alias vsync_on"mat_vsync 1;alias vsync_level echo vsync=on"
 
-alias vsync vsync_off
+alias vsync
 
 // --------------
 // '-- OpenGL --'
