add sprays=keep module

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -657,9 +657,11 @@ alias decals_art
 //r_spray_lifetime 0 // Clear sprays immediately
 //cl_spraydisable 0 // Enable sprays
 //cl_spraydisable 1 // Disable sprays
+//tf_delete_temp_files 0 // Disable deleting sprays on exit
 
-alias sprays_off"cl_allowdownload 0;cl_allowupload 0;r_spray_lifetime 0;cl_spraydisable 1;alias sprays_level echo sprays=off"
-alias sprays_on"cl_allowdownload 1;cl_allowupload 1;r_spray_lifetime 2;cl_spraydisable 0;alias decals_clear;decals_sprays_support;alias sprays_level echo sprays=on"
+alias sprays_off"cl_allowdownload 0;cl_allowupload 0;r_spray_lifetime 0;cl_spraydisable 1;tf_delete_temp_files 1;alias sprays_level echo sprays=off"
+alias sprays_on"cl_allowdownload 1;cl_allowupload 1;r_spray_lifetime 2;cl_spraydisable 0;tf_delete_temp_files 1;alias decals_clear;decals_sprays_support;alias sprays_level echo sprays=on"
+alias sprays_keep"cl_allowdownload 1;cl_allowupload 1;r_spray_lifetime 2;cl_spraydisable 0;tf_delete_temp_files 0;alias decals_clear;decals_sprays_support;alias sprays_level echo sprays=keep"
 
 alias sprays
 
