Finalize sprays=keep module
This commit also changes the asterisk characters to an underline.

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1748,6 +1748,7 @@ alias decals_art=off"alias decals_art decals_art_off"
 alias decals_art=on"alias decals_art decals_art_on"
 alias sprays=off"alias sprays sprays_off"
 alias sprays=on"alias sprays sprays_on"
+alias sprays=keep"alias sprays sprays_keep"
 alias gibs=off"alias gibs gibs_off"
 alias gibs=low"alias gibs gibs_low"
 alias gibs=medium_low"alias gibs gibs_medium_low"
