Add hud_contracts module

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1168,6 +1168,12 @@ cl_vote_ui_active_after_voting 1 // Keep the vote UI active after voting to see 
 //tf_quest_notification_line_delay .2 // Shorter voice line delay after contract
 //tf_quest_notification_line_delay 1 // Default voice line delay
 
+alias hud_contracts_off"tf_contract_competitive_show 0;tf_contract_progress_show 0;alias hud_contracts_level echo hud_contracts=off"
+alias hud_contracts_all"tf_contract_competitive_show 1;tf_contract_progress_show 1;alias hud_contracts_level echo hud_contracts=all"
+alias hud_contracts_active_only"tf_contract_competitive_show 2;tf_contract_progress_show 2;alias hud_contracts_level echo hud_contracts=active_only"
+
+alias hud_contracts hud_contracts_all
+
 // --------------------
 // '-- Achievements --'
 // --------------------
@@ -1808,6 +1814,9 @@ alias vsync=off"alias vsync vsync_off"
 alias vsync=on"alias vsync vsync_on"
 alias hud_player_model=off"alias hud_player_model hud_player_model_off"
 alias hud_player_model=on"alias hud_player_model hud_player_model_on"
+alias hud_contracts=off"alias hud_contracts hud_contracts_off"
+alias hud_contracts=all"alias hud_contracts hud_contracts_all"
+alias hud_contracts=active_only"alias hud_contracts hud_contracts_active_only"
 alias hud_panels=off"alias hud_panels hud_panels_off"
 alias hud_panels=low"alias hud_panels hud_panels_low"
 alias hud_panels=high"alias hud_panels hud_panels_high"
