--- a/config/mastercomfig/cfg/comfig/module_levels.cfg
+++ b/config/mastercomfig/cfg/comfig/module_levels.cfg
@@ -37,6 +37,7 @@ ropes_level
 fpscap_level
 vsync_level
 hud_player_model_level
+hud_contracts_level
 hud_panels_level
 hud_avatars_level
 match_hud_level
