--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1165,8 +1165,7 @@ cl_vote_ui_active_after_voting 1 // Keep the vote UI active after voting to see 
                                  // 0 - never
                                  // 1 - all
                                  // 2 - active only
-//tf_quest_notification_line_delay .2 // Shorter voice line delay after contract
-//tf_quest_notification_line_delay 1 // Default voice line delay
+//tf_quest_notification_line_delay 1.2 // Voice line delay for Miss Pauling saying about contracts
 
 alias hud_contracts_off"tf_contract_competitive_show 0;tf_contract_progress_show 0;alias hud_contracts_level echo hud_contracts=off"
 alias hud_contracts_all"tf_contract_competitive_show 1;tf_contract_progress_show 1;alias hud_contracts_level echo hud_contracts=all"
