--- a/config/cfg/presets/very-low.cfg
+++ b/config/cfg/presets/very-low.cfg
@@ -30,7 +30,7 @@ textures=very_low
 ropes=off
 vsync=off
 hud_player_model=off
-hud_contracts=off
+hud_contracts=hide
 hud_panels=off
 hud_avatars=off
 hud_achievement=off
