--- a/config/cfg/presets/high.cfg
+++ b/config/cfg/presets/high.cfg
@@ -13,7 +13,7 @@ pyrovision=high
 romevision=on
 motion_blur=off
 anti_aliasing=msaa_8x
-texture_filter=aniso8x
+texture_filter=aniso_8x
 characters=high
 decals=medium
 decals_models=low
