--- a/config/cfg/presets/medium-high.cfg
+++ b/config/cfg/presets/medium-high.cfg
@@ -13,7 +13,7 @@ pyrovision=medium
 romevision=off
 motion_blur=off
 anti_aliasing=msaa_4x
-texture_filter=aniso4x
+texture_filter=aniso_4x
 characters=high
 decals=low
 decals_models=off
