--- a/config/cfg/presets/ultra.cfg
+++ b/config/cfg/presets/ultra.cfg
@@ -13,7 +13,7 @@ pyrovision=high
 romevision=on
 motion_blur=off
 anti_aliasing=msaa_8x
-texture_filter=aniso16x
+texture_filter=aniso_16x
 characters=ultra
 decals=ultra
 decals_models=high
