--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1890,6 +1890,7 @@ alias very_low_reset"exec comfig/very_low_reset.cfg"
 
 alias modules_c"exec user/modules.cfg"
 alias autoexec_c"exec user/autoexec.cfg"
+alias listenserver_c"exec user/listenserver.cfg"
 
 alias run_modules"exec comfig/modules_run.cfg"
 alias modules_levels"exec comfig/modules_levels.cfg"
