Config updates (WIP)
- Removed all debug commands, because the vast majority of them aren't even used by most of the people

- Removed switchconsole toggle, which is next to none in terms of utilization ratio

- Removed apply_user, as it may cause misleading (since it always exec modules_c, which many users don't override with aliases)

- Added change_preset_NAME, which applies presets' settings instantly

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -159,8 +159,6 @@ alias bandwidth_8.0Mbps"rate 1048576;alias bandwidth_level echo bandwidth=8.0Mbp
 
 alias bandwidth bandwidth_762Kbps
 
-alias mm_queue_casual"quit smoking"
-
 // -------------
 // '-- Files --'
 // -------------
@@ -337,8 +335,6 @@ alias flashlight_off"mat_supportflashlight 0;r_flashlightculldepth 0;r_flashligh
 alias flashlight_on"mat_supportflashlight 1;r_flashlightculldepth 1;r_flashlightdepthres 1024;r_flashlightdepthtexture 1;r_flashlightmodels 1;r_flashlightrender 1;r_flashlightscissor 1;sha_fla_support;alias flashlight_level echo flashlight=on"
 
 alias flashlight
-
-ipc_exec_all quit smoking
 
 // ---------------
 // '-- Effects --'
@@ -872,8 +868,6 @@ mat_managedtextures 0 // Disable managed textures which do not work in D3D9Ex
 mat_queue_mode -1 // Make sure ideal threading mode is on
 //mat_bufferprimitives 1 // Skip flushing of primitives when meshes draw
 
-alias mm_queue_party"quit smoking"
-
 // ---------------
 // '-- FPS Cap --'
 // ---------------
@@ -952,8 +946,6 @@ alias vsync
 // ---------------
 // General/misc HUD settings
 
-//cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
-//cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
 //cl_hud_minmode 1 // HUD min mode
 //hud_fastswitch 1 // Weapon switch behavior:
                    // 0 - PC Buckets
@@ -971,7 +963,6 @@ alias vsync
 //cl_software_cursor 1 // Uses a stylized cursor handled by the game instead of the OS
 //tf_scoreboard_mouse_mode 2 // Use mouse mode on scoreboard. 0 - disabled, 1 - always, 2 - on click (MOUSE2).
 //tf_scoreboard_alt_class_icons 1 // Alternate class icons on the scoreboard
-//tf_use_match_hud 1 // Show the top player bar on all servers
 //tf_mm_dashboard_slide_panel_step 10 // Change the horizontal offset of the primary matchmaking panel
 tf_dashboard_slide_time .1 // Time in seconds for dashboard transitions
 tf_item_inspect_model_auto_spin 1 // Auto spin items in the inspect view
@@ -983,7 +974,6 @@ tf_quest_map_tuner_wobble_magnitude .01 // Enable red tuner at the bottom
 //tf_disguise_menu_controller_mode 1 // Controller disguise menu
 //tf_simple_disguise_menu 0 // Concise disguise menu
 tf_colorblindassist 1 // Add extra icon for jarate (colorblind mode)
-//cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy server intros)
 sv_motd_unload_on_dismissal 1 // Server will tell the player to unload the MOTD
 //hud_classautokill 0 // No suicide on class change
 tf_halloween_bonus_ducks_cooldown 20 // Delay in seconds before BONUS DUCKS sound again
@@ -992,13 +982,9 @@ tf_hud_num_building_alert_beeps 2 // Numbers of beeps when an alert pops up on a
 //tf_rd_finale_beep_time 10 // Beep time during robot destruction victory
 tf_hud_show_servertimelimit 1 // Show server map time
 scr_centertime 5 // Time for center text on servers
-//tf_hud_target_id_alpha 100 // Transparency of target ID
 //tf_hud_target_id_disable_floating_health 0 // Show floating health bar
 //tf_hud_target_id_disable_floating_health 1 // Hide floating health bar
 hud_medichealtargetmarker 1 // Shows Medi Gun heal target with a small marker
-//tf_healthicon_height_offset 10 // Offset of heath icon
-//tf_hud_target_id_offset 0 // Vertical offset of target ID
-//tf_hud_target_id_show_avatars 2 // Show avatars: 0 - never, 1 - from everyone, 2 - from friends.
 //tf_spectator_target_location 0 // 0 - center (default)
                                  // 1 - bottom left
                                  // 2 - bottom center
@@ -1013,10 +999,17 @@ tf_scoreboard_ping_as_text 1 // Use text for ping in the scoreboard
 //tf_queue_spinner_color 1 // Blue queue TF logo spinner
 //tf_hud_notification_duration 3 // How long notifications appear on screen
 
+//cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
+//cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
+
 alias hud_player_model_off"cl_hud_playerclass_use_playermodel 0;alias hud_player_model_level hud_player_model=off"
 alias hud_player_model_on"cl_hud_playerclass_use_playermodel 1;alias hud_player_model_level hud_player_model=on"
 
 alias hud_player_model
+
+//tf_healthicon_height_offset 10 // Offset of heath icon
+//tf_hud_target_id_offset 0 // Vertical offset of target ID
+//tf_hud_target_id_alpha 100 // Transparency of target ID
 
 alias hud_panels_off"tf_healthicon_height_offset -10000;tf_hud_target_id_offset -10000;tf_hud_target_id_alpha 0;alias hud_panels_level echo hud_panels=off"
 alias hud_panels_low"tf_healthicon_height_offset 10;tf_hud_target_id_offset 0;tf_hud_target_id_alpha 255;alias hud_panels_level echo hud_panels=low"
@@ -1024,11 +1017,15 @@ alias hud_panels_high"tf_healthicon_height_offset 10;tf_hud_target_id_offset 0;t
 
 alias hud_panels hud_panels_high
 
+//tf_hud_target_id_show_avatars 2 // Show avatars: 0 - never, 1 - from everyone, 2 - from friends.
+
 alias hud_avatars_off"tf_hud_target_id_show_avatars 0;alias hud_avatars_level echo hud_avatars=off"
 alias hud_avatars_everyone"tf_hud_target_id_show_avatars 1;alias hud_avatars_level echo hud_avatars=everyone"
 alias hud_avatars_friends"tf_hud_target_id_show_avatars 2;alias hud_avatars_level echo hud_avatars=friends"
 
 alias hud_avatars hud_avatars_friends
+
+//tf_use_match_hud 1 // Show the top player bar on all servers
 
 alias match_hud_alias"tf_use_match_hud 0;alias match_hud_level echo match_hud=off"
 alias match_hud_alias2"alias match_hud_off match_hud_alias"
@@ -1038,12 +1035,16 @@ alias match_hud_on"tf_use_match_hud 1;alias match_hud_once;alias match_hud_level
 
 alias match_hud match_hud_on
 
+//map_background itemtest // Preload mods (animations) to bypass sv_pure 1
+
 alias dynamic_background_off"alias dynamic_background_level echo dynamic_background=off"
 alias dynamic_background_preload"map_background preload_room;wait 10;disconnect;alias dynamic_background_level echo dynamic_background=preload"
 alias dynamic_background_itemtest"map_background itemtest;wait 10;disconnect;alias dynamic_background_level echo dynamic_background=itemtest"
 alias dynamic_background_dustbowl"map_background background01;wait 1000;stop;alias dynamic_background_level echo dynamic_background=dustbowl"
 
 alias dynamic_background dynamic_background_off
+
+//cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy server intros)
 
 alias htmlmotd_off"cl_disablehtmlmotd 1;alias htmlmotd_level echo htmlmotd=off"
 alias htmlmotd_on"cl_disablehtmlmotd 0;alias htmlmotd_level echo htmlmotd=on"
@@ -1114,7 +1115,7 @@ tf_backpack_page_button_delay .25 // Decrease button delay for moving items
 //cl_crosshair_green 39 // Crosshair green (0 to 255)
 //cl_crosshair_blue 176 // Crosshair blue (0 to 255)
 //cl_crosshair_scale 32 // Size of crosshair
-//cl_crosshair_file"" // Style of crosshair
+//cl_crosshair_file "" // Style of crosshair
 //cl_observercrosshair 0 // Disable crosshair in spectator
 //crosshair 0 // Disable crosshair entirely
 
@@ -1156,7 +1157,7 @@ cl_vote_ui_active_after_voting 1 // Keep the vote UI active after voting to see 
 // -----------------
 // Contracts as part of campaigns
 
-//tf_contract_competitive_show 2 // During competitive matches, contract visibility:
+//tf_contract_competitive_show 1 // During competitive matches, contract visibility:
                                  // 0 - never
                                  // 1 - all
                                  // 2 - active only
@@ -1216,54 +1217,6 @@ alias console_off"con_filter_text zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
 alias console_on"con_filter_enable 0;con_enable 1;alias console_level echo console=on"
 
 alias console console_on
-
-alias console_off_flip"hideconsole;console_off;alias switchconsole console_on_flip"
-alias console_on_flip"console_on;showconsole;alias switchconsole console_off_flip"
-
-alias switchconsole console_on_flip
-
-// -------------
-// '-- Debug --'
-// -------------
-// Some handy commands for debugging the game
-
-alias debug_output"debug_output_1"
-alias debug_output_toggle"incrementvar developer -1 2 1"
-alias debug_output_display"developer -1"
-alias debug_output_1"developer 1"
-alias debug_output_2"developer 2"
-
-alias debug_instant_respawn"sv_cheats 1;mp_disable_respawn_times 1;spec_freeze_time 0;spec_freeze_traveltime 0;mp_respawnwavetime 0"
-alias debug_invulnerable"sv_cheats 1;buddha"
-
-alias debug_bots"tf_bot_kick all;tf_bot_quota_mode normal;tf_bot_difficulty 3;tf_bot_quota 32"
-alias debug_target"sv_cheats 1;bot -targetdummy"
-
-alias debug_occlusion"sv_cheats 1;r_visocclusion 1;r_occlusionspew 1"
-alias debug_pixelvis"r_drawpixelvisibility 1;r_pixelvisibility_spew 1"
-alias debug_fillrate"sv_cheats 1;mat_fillrate 1"
-alias debug_matsys_reload"toggle mat_aaquality"
-
-alias debug_sound_loads"snd_async_showmem;snd_async_spew 1;snd_async_spew_blocking 2;snd_async_stream_spew 2"
-alias debug_sound_dsp"sv_cheats 1;snd_showstart 2;adsp_debug 6"
-
-alias debug_network_packets"net_showudp 1"
-alias debug_network_drops"net_showdrop 1"
-alias debug_network_graph"net_graph 4"
-alias debug_network_pred"cl_showerror 2"
-
-alias debug_fps"net_graph 1"
-alias debug_fps_range"cl_showfps 0;cl_showfps 2"
-
-alias debug_vprof_log_spike"con_logfile vprof_spike.log"
-alias debug_vprof_log"con_logfile vprof.log"
-
-alias debug_vprof_spike"vprof_dump_spikes 100"
-
-alias debug_vprof_spikes"vprof_off;vprof_reset;debug_vprof_log_spike;vprof_dump_oninterval 0;vprof_report_oninterval 0;debug_vprof_spike;vprof_on"
-alias debug_vprof_dump"vprof_off;vprof_reset;debug_vprof_log;vprof_dump_oninterval 10;vprof_report_oninterval 0;vprof_dump_spikes 0;vprof_on"
-alias debug_vprof_report"vprof_off;vprof_reset;debug_vprof_log;vprof_dump_oninterval 0;vprof_report_oninterval 10;vprof_dump_spikes 0;vprof_on"
-alias debug_vprof_off"vprof_off;vprof_reset;con_logfile 0;vprof_dump_oninterval 0;vprof_report_oninterval 0;vprof_dump_spikes 0"
 
 // -----------------------
 // '-- Closed Captions --'
@@ -1369,7 +1322,7 @@ alias outlines
               // 0 - to console
               // 1 - to console and chat
               // 2 - to console and HUD
-//ds_prefix"" // Prefix file names with this text
+//ds_prefix "" // Prefix file names with this text
 //ds_record // Start recording a demo
 //ds_stop // Stop recording a demo
 //ds_screens 1 // Take a screenshot of the scoreboard when the round ends
@@ -1566,8 +1519,6 @@ alias voice_chat_off"voice_enable 0;voice_modenable 0;cmd VModEnable 0;alias voi
 alias voice_chat_on"voice_enable 1;voice_modenable 1;cmd VModEnable 1;alias voice_chat_level echo voice_chat=on"
 
 alias voice_chat voice_chat_on
-
-detach
 
 // ------------
 // '-- Logo --'
@@ -1894,7 +1845,6 @@ alias listenserver_c"exec user/listenserver.cfg"
 
 alias run_modules"exec comfig/modules_run.cfg"
 alias modules_levels"exec comfig/modules_levels.cfg"
-alias apply_user"modules_c;run_modules;autoexec_c"
 alias restore_preset"exec comfig/comfig.cfg;preset;run_modules"
 alias restore_config"exec autoexec.cfg"
 
