--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1845,6 +1845,7 @@ alias listenserver_c"exec user/listenserver.cfg"
 
 alias run_modules"exec comfig/modules_run.cfg"
 alias modules_levels"exec comfig/modules_levels.cfg"
+alias apply_user"modules_c;run_modules;autoexec_c"
 alias restore_preset"exec comfig/comfig.cfg;preset;run_modules"
 alias restore_config"exec autoexec.cfg"
 
