Sort addon commands alphabetically
This commit also fixes an inconsistency in one of the Transparent Viewmodels addon's echoes.

--- a/config/addons/mastercomfig-transparent-viewmodels-addon/cfg/transparent-viewmodels/tr_vm_aliases.cfg
+++ b/config/addons/mastercomfig-transparent-viewmodels-addon/cfg/transparent-viewmodels/tr_vm_aliases.cfg
@@ -30,7 +30,7 @@ alias anti_aliasing=msaa_8x tr_vm_echo
 alias anti_aliasing aa_tr_vm_echo
 alias anti_aliasing_level aa_tr_vm_echo
 
-alias block_antialias_echo aa_tr_vm_echo
+alias block_antialias_echo tr_vm_echo
 
 // Post-Processing aliases
 alias mat_hdr_level tr_vm_echo
