Add ping tolerance module

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -184,13 +184,10 @@ alias download download_auto
 // -------------------
 // Adjusts casual/competitive matchmaking settings
 
-//tf_mm_custom_ping 50 // Ping tolerance for matchmaking
-//tf_mm_custom_ping_enabled 1 // Enable custom ping tolerance
 tf_mm_debug_level 0 // Remove matchmaking debug output
 sdr_spew_level 0 // Disable SDR output
 //tf_mm_partyclient_debug 1 // Enable party debug output
 //tf_party_ignore_invites 1 // Ignore party invites
-//tf_party_join_request_mode 1 // Mode for party join requests: 0 - open join, 1 - request join, 2 - invite join.
 //tf_party_force_update // Force an update to the party system
 //tf_party_keep_on_same_team 0 // Do not enforce parties being on the same team
 //tf_party_keep_on_same_team 1 // Enforce parties being on the same team
@@ -198,11 +195,27 @@ sdr_spew_level 0 // Disable SDR output
 //tf_datacenter_ping_dump // Dump server routing debug info
 //tf_mm_dump_match_invites // Show current match invites
 
+//tf_party_join_request_mode 1 // Mode for party join requests: 0 - open join, 1 - request join, 2 - invite join.
+
 alias party_mode_open"tf_party_join_request_mode 0;alias party_mode_level echo party_mode=open"
 alias party_mode_request"tf_party_join_request_mode 1;alias party_mode_level echo party_mode=request"
 alias party_mode_invite"tf_party_join_request_mode 2;alias party_mode_level echo party_mode=invite"
 
 alias party_mode party_mode_request
+
+//tf_mm_custom_ping_enabled 1 // Enable custom ping tolerance
+//tf_mm_custom_ping 50 // Ping tolerance for matchmaking
+
+alias ping_tolerance_off"tf_mm_custom_ping_enabled 0;alias ping_tolerance_level echo ping_tolerance=off"
+alias ping_tolerance_25"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 25;alias ping_tolerance_level echo ping_tolerance=25"
+alias ping_tolerance_50"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 50;alias ping_tolerance_level echo ping_tolerance=50"
+alias ping_tolerance_60"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 60;alias ping_tolerance_level echo ping_tolerance=60"
+alias ping_tolerance_70"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 70;alias ping_tolerance_level echo ping_tolerance=70"
+alias ping_tolerance_80"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 80;alias ping_tolerance_level echo ping_tolerance=80"
+alias ping_tolerance_90"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 90;alias ping_tolerance_level echo ping_tolerance=90"
+alias ping_tolerance_100"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 100;alias ping_tolerance_level echo ping_tolerance=100"
+
+alias ping_tolerance ping_tolerance_50
 
 // ===================
 // '--- Rendering ---'
@@ -1807,6 +1820,14 @@ alias mod_support=on"alias mod_support mod_support_on"
 alias party_mode=open"alias party_mode party_mode_open"
 alias party_mode=request"alias party_mode party_mode_request"
 alias party_mode=invite"alias party_mode party_mode_invite"
+alias ping_tolerance=off"alias ping_tolerance ping_tolerance_off"
+alias ping_tolerance=25"alias ping_tolerance ping_tolerance_25"
+alias ping_tolerance=50"alias ping_tolerance ping_tolerance_50"
+alias ping_tolerance=60"alias ping_tolerance ping_tolerance_60"
+alias ping_tolerance=70"alias ping_tolerance ping_tolerance_70"
+alias ping_tolerance=80"alias ping_tolerance ping_tolerance_80"
+alias ping_tolerance=90"alias ping_tolerance ping_tolerance_90"
+alias ping_tolerance=100"alias ping_tolerance ping_tolerance_100"
 alias logo=off"alias logo logo_off"
 alias logo=on"alias logo logo_on"
 
