--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -203,6 +203,9 @@
 //party_mode=request
 // open, request, invite
 
+//ping_tolerance=50
+// 100, 90, 80, 70, 60, 50, 25, off
+
 //logo=on
 // on, off
 
