use new mike features
don't use redirects, so we have proper embeds always
update from remote properly (speeds up builds). we still need to sleep because there's a race condition between the release docs finishing their push and the dev docs finishing theirs.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,8 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
     - uses: actions/setup-python@v2
       with:
         python-version: 3.x
@@ -43,13 +41,13 @@ jobs:
       run:
         sleep 240
     - name: Update from Remote
-      run: git fetch
+      run: git fetch origin gh-pages --depth=1
     - name: Build docs (latest)
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/release' }}
-      run: mike deploy -up $(git describe --tags --abbrev=0) latest page
+      run: mike deploy --no-redirect --rebase -up $(git describe --tags --abbrev=0) latest page
     - name: Build docs (develop)
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
-      run: mike deploy -up dev
+      run: mike deploy --rebase -up dev
     - name: Build docs
       if: ${{ github.event_name == 'pull_request' }}
       run: mike deploy -u $(git describe --tags) latest
