--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,6 +42,8 @@ jobs:
         sleep 240
     - name: Update from Remote
       run: git fetch origin gh-pages --depth=1
+    - name: Fetch Tags
+      run: git fetch --tags
     - name: Build docs (latest)
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/release' }}
       run: mike deploy --no-redirect --rebase -up $(git describe --tags `git rev-list --tags --max-count=1`) latest page
