--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,7 +46,7 @@ jobs:
       run: git fetch --tags
     - name: Build docs (latest)
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/release' }}
-      run: mike deploy --no-redirect --rebase -up $(git describe --tags `git rev-list --tags --max-count=1`) latest page
+      run: mike deploy --no-redirect -up $(git describe --tags `git rev-list --tags --max-count=1`) latest page
     - name: Build docs (develop)
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/develop' }}
       run: mike deploy --rebase -up dev
